# DYOD_WS1718_Sprint1

./: CMakeLists.txt
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/operators/: get_table.cpp  table_scan.cpp  table_scan.hpp
src/lib/storage/: FittedAttributeVector.hpp  chunk.cpp  chunk.hpp  dictionary_column.hpp  fitted_attribute_vector.hpp  reference_column.cpp  reference_column.hpp  storage_manager.cpp  storage_manager.hpp  table.cpp  table.hpp  value_column.cpp  value_column.hpp
src/test/: CMakeLists.txt
src/test/operators/: table_scan_test.cpp
src/test/storage/: dictionary_column_test.cpp  fitted_attribute_vector_test.cpp  reference_column_test.cpp  storage_manager_test.cpp  table_test.cpp  value_column_test.cpp
